--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsdom": "^23.0.1",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^3.4.8",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
